# satellite-inspection-dynamics-models

./: README.md  pyproject.toml
data/: LinearModelSize_eval_data.pkl
eval_data/: 2_step_linear_1024_eval_data.pkl  2_step_linear_256_eval_data.pkl  5_step_linear_1024_eval_data.pkl  5_step_linear_256_eval_data.pkl  LinearModelSize_eval_data.pkl  constrained_delta_mlp_eval_data.pkl  constrained_delta_rnn_eval_data.pkl  constrained_mlp_eval_data.pkl  constrained_rnn_eval_data.pkl  delta_mlp_eval_data.pkl  delta_mlp_eval_data_NUMPY.pkl  delta_mlp_eval_data_NUMPYLESS.pkl  delta_mlp_log_prob_eval_data.pkl  delta_prob_mlp_eval_data.pkl  delta_prob_mlp_eval_data_NUMPY.pkl  delta_prob_mlp_eval_data_NUMPYLESS.pkl  delta_prob_mlp_log_prob_eval_data.pkl  delta_prob_rnn_eval_data.pkl  delta_prob_rnn_eval_data_50.pkl  delta_prob_rnn_log_prob_eval_data.pkl  delta_rnn_eval_data.pkl  delta_rnn_log_prob_eval_data.pkl  linear_1024_eval_data.pkl  linear_256_eval_data.pkl  mlp_eval_data.pkl  mlp_log_prob_eval_data.pkl  prob_mlp_eval_data.pkl  prob_mlp_eval_data_50.pkl  prob_mlp_log_prob_eval_data.pkl  prob_rnn_eval_data.pkl  prob_rnn_eval_data_50.pkl  prob_rnn_log_prob_eval_data.pkl  rnn_eval_data.pkl  rnn_log_prob_eval_data.pkl
models/: 2_step_linear_model_256.pth  5_step_linear_model_256.pth  MLP256_pred_size=1_constrained=False_delta=False_lr0.001_bs128.pkl  MLP256_pred_size=1_constrained=False_delta=True_lr0.001_bs128.pkl  MLP256_pred_size=1_constrained=True_delta=False_lr0.001_bs128.pkl  MLP256_pred_size=1_constrained=True_delta=True_lr0.001_bs128.pkl  linear_model_256.pth  (+16 more)
(+17 files in other folders)
